<?xml version="1.0" encoding="utf-8"?>
<com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_back"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.witnsoft.libinterhis.utils.ClearEditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginTop="100dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:hint="@string/enter_user_name"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColor="@color/text_dark_color"
        android:textColorHint="@color/text_gray_color"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/divider_color"
        android:visibility="gone"/>

    <com.witnsoft.libinterhis.utils.ClearEditText
        android:id="@+id/et_user_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:layout_marginRight="250dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:hint="@string/user_password"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColor="@color/text_dark_color"
        android:textColorHint="@color/text_gray_color"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="260dp"
        android:layout_marginRight="260dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_login"
        android:text="@string/user_login"
        android:textColor="@color/colorWhite"/>

</com.witnsoft.libinterhis.utils.ui.AutoScaleLinearLayout>