<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_divider_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/back"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_my_expert"
            android:textColor="@color/text_dark_color"
            android:textSize="15dp"/>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/edit"
                android:textColor="@color/colorBlue"
                android:textSize="12dp"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_my_expert"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorWhite"
                android:enabled="false"
                android:gravity="top"
                android:hint="@string/input_my_expert"
                android:padding="20dp"
                android:textColor="@color/text_medium_color"
                android:textSize="12dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>