<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/doctor_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/fragment_doctor_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/touxiang"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fragment_doctor_name"
                    style="@style/bigSize"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:text="张强强"/>

                <TextView
                    android:id="@+id/fragment_doctor_duties"
                    style="@style/smallSize"
                    android:layout_marginLeft="20dp"
                    tools:text="主任医师"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/xingxing"/>

                <TextView
                    android:id="@+id/fragment_doctor_grade"
                    style="@style/smallSize"
                    android:layout_marginLeft="5dp"
                    android:gravity="bottom"
                    android:textColor="@color/colorRed"
                    tools:text="9.5"/>

                <TextView
                    style="@style/smallSize"
                    android:layout_marginLeft="10dp"
                    android:text="接诊量"/>

                <TextView
                    android:id="@+id/fragment_doctor_number"
                    style="@style/smallSize"
                    android:layout_marginLeft="5dp"
                    tools:text="77"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_hosp"
                    style="@style/smallSize"
                    tools:text="天津市宝坻中医院    内科"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/doctor_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doctor_message"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_pat_waiting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                tools:text="20"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting"
                android:textSize="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_pat_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                tools:text="77"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_count"
                android:textSize="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_daily_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                tools:text="320"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_income"
                android:textSize="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/tv_all_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                tools:text="320"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_count"
                android:textSize="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/sl_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doctor_count"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_pat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorGray"
            android:scrollbars="vertical"
            android:visibility="gone"/>

    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/tv_no_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/doctor_count"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:gravity="center"
        android:text="@string/not_ever_visit"
        android:textColor="@color/text_gray_color"
        android:textSize="15dp"
        android:visibility="visible"/>

    <Button
        android:id="@+id/doctor_visit"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_visit"
        android:text="@string/visit"
        android:textColor="@color/colorWhite"
        android:textSize="12dp"/>

    <Button
        android:id="@+id/btn_take_rest"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_logout"
        android:text="@string/logout"
        android:textColor="@color/colorWhite"
        android:textSize="8dp"/>


    <!--android:layout_marginLeft="100dp"-->
    <!--android:layout_marginTop="400dp"-->


</RelativeLayout>